--- a/ejb-mod/pom.xml
+++ b/ejb-mod/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <artifactId>ejb-ra</artifactId>
+        <artifactId>ejb-mq-mdb-test</artifactId>
         <groupId>hms</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
